# monorepo

./: .gitignore
engine/: pyproject.toml  service.py
engine/scripts/: test_batch.py
engine/services/: image_description_service.py  summarizer_service.py  translator_service.py
